# docker-mediasoup

./: .gitignore  LICENSE  README.md  docker-compose-gst.yml  docker-compose.yml
certs/: memo.txt
demo/: README.md  package.json  vue.config.js
demo/src/components/: MyPage.vue  ProducerSelectionDialog.vue
demo/src/libs/: async-queue.ts  mediasoup-consumer.ts  mediasoup-dataconsumer.ts  mediasoup-dataproducer.ts  mediasoup-demo.ts  mediasoup-events.ts  mediasoup-producer.ts  mediasoup-transport.ts  mediasoup-websocket.ts  websocket-client.ts
demo/src/views/: HomeView.vue
gst-demo/: Dockerfile
gst-demo/broadcaster/: package-lock.json  package.json
gst-demo/broadcaster/src/: gstreamer.ts  main.ts  mediasoup-broadcaster.ts  mediasoup-websocket-client.ts  websocket-client.ts
media-server/: Dockerfile
media-server/config/: media-server.config
media-server/simple-media-server/: CMakeLists.txt
media-server/simple-media-server/src/: MediaServer.cc  MediaServer.h  Settings.cc  Settings.h  StreamInfo.h  main.cc
media-server/simple-media-server/src/codec/aac/: AACDecoder.cc  AACDecoder.h  AudioSpecificConfig.cc  AudioSpecificConfig.h
media-server/simple-media-server/src/codec/h264/: AVCDecoderConfigurationRecord.cc  AVCDecoderConfigurationRecord.h  H264Nal.h
media-server/simple-media-server/src/codec/opus/: OpusEncoder.cc  OpusEncoder.h
media-server/simple-media-server/src/mediasoup/: MediaProducer.cc  MediaProducer.h  MediasoupClient.cc  MediasoupClient.h  PlainTransport.h
media-server/simple-media-server/src/rtmp/: RTMPClient.cc  RTMPClient.h  RTMPServer.cc  RTMPServer.h  RTMPUtility.cc  RTMPUtility.h
media-server/simple-media-server/src/rtp/: H264RTPSender.cc  H264RTPSender.h  OpusRTPSender.cc  OpusRTPSender.h  RTPSender.cc  RTPSender.h
media-server/simple-media-server/src/utils/: AAC2OpusConv.cc  AAC2OpusConv.h  BaseThread.cc  BaseThread.h  BitReader.cc  BitReader.h  BlockingQueue.h  Log.h  NetworkUtils.cc  NetworkUtils.h  SafeMap.h  SafeQueue.h  WebsocketClient.cc  WebsocketClient.h
mediasoup/: Dockerfile
mediasoup/config/: log4js-config.json  mediasoup-config.json
mediasoup/mediasoup/: package.json  tsconfig.json
mediasoup/mediasoup/src/: main.ts  mediasoup-client.ts  mediasoup-error.ts  (+8 more)
